Corrected unitary test that failed because reorganization + code format