@@ -1,8 +1,8 @@
 package com.motoshop.api.security;
 
+import com.motoshop.api.security.jwt.JwtAuthenticationFilter;
 import java.util.Arrays;
 import java.util.List;
-
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -22,104 +22,116 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import com.motoshop.api.security.jwt.JwtAuthenticationFilter;
-
 /**
  * Central security configuration.
+ *
  * <ul>
- *   <li>Stateless session policy: every request authenticates itself
- *       with a Bearer JWT, no server-side session state.</li>
- *   <li>CSRF disabled: there are no cookies; the token must be
- *       attached explicitly by the client, so CSRF does not apply.</li>
- *   <li>{@link JwtAuthenticationFilter} runs before
- *       {@link UsernamePasswordAuthenticationFilter}.</li>
- *   <li>Authorisation by role uses Spring's {@code hasRole(...)},
- *       which maps to authority {@code ROLE_<NAME>}.</li>
+ *   <li>Stateless session policy: every request authenticates itself with a Bearer JWT, no
+ *       server-side session state.
+ *   <li>CSRF disabled: there are no cookies; the token must be attached explicitly by the client,
+ *       so CSRF does not apply.
+ *   <li>{@link JwtAuthenticationFilter} runs before {@link UsernamePasswordAuthenticationFilter}.
+ *   <li>Authorisation by role uses Spring's {@code hasRole(...)}, which maps to authority {@code
+ *       ROLE_<NAME>}.
  * </ul>
- * Method-level security ({@code @PreAuthorize}) is enabled so future
- * sprints can secure individual service methods.
+ *
+ * Method-level security ({@code @PreAuthorize}) is enabled so future sprints can secure individual
+ * service methods.
  */
 @Configuration
 @EnableMethodSecurity
 public class SecurityConfig {
 
-    @Value("${app.cors.allowed-origins}")
-    private String allowedOriginsRaw;
+  @Value("${app.cors.allowed-origins}")
+  private String allowedOriginsRaw;
 
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        // BCrypt with default strength (10). Adequate for this project;
-        // upgrading the cost factor later does not break existing hashes,
-        // since BCrypt encodes the cost in the hash prefix.
-        return new BCryptPasswordEncoder();
-    }
+  @Bean
+  public PasswordEncoder passwordEncoder() {
+    // BCrypt with default strength (10). Adequate for this project;
+    // upgrading the cost factor later does not break existing hashes,
+    // since BCrypt encodes the cost in the hash prefix.
+    return new BCryptPasswordEncoder();
+  }
 
-    @Bean
-    public DaoAuthenticationProvider authenticationProvider(UserDetailsService uds,
-                                                            PasswordEncoder encoder) {
-        DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
-        provider.setUserDetailsService(uds);
-        provider.setPasswordEncoder(encoder);
-        return provider;
-    }
+  @Bean
+  public DaoAuthenticationProvider authenticationProvider(
+      UserDetailsService uds, PasswordEncoder encoder) {
+    DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
+    provider.setUserDetailsService(uds);
+    provider.setPasswordEncoder(encoder);
+    return provider;
+  }
 
-    @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration cfg) throws Exception {
-        return cfg.getAuthenticationManager();
-    }
+  @Bean
+  public AuthenticationManager authenticationManager(AuthenticationConfiguration cfg)
+      throws Exception {
+    return cfg.getAuthenticationManager();
+  }
 
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration cors = new CorsConfiguration();
-        cors.setAllowedOrigins(Arrays.asList(allowedOriginsRaw.split("\\s*,\\s*")));
-        cors.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        cors.setAllowedHeaders(List.of("*"));
-        cors.setExposedHeaders(List.of("Authorization"));
-        cors.setAllowCredentials(true);
-        cors.setMaxAge(3600L);
+  @Bean
+  public CorsConfigurationSource corsConfigurationSource() {
+    CorsConfiguration cors = new CorsConfiguration();
+    cors.setAllowedOrigins(Arrays.asList(allowedOriginsRaw.split("\\s*,\\s*")));
+    cors.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+    cors.setAllowedHeaders(List.of("*"));
+    cors.setExposedHeaders(List.of("Authorization"));
+    cors.setAllowCredentials(true);
+    cors.setMaxAge(3600L);
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/api/**", cors);
-        return source;
-    }
+    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+    source.registerCorsConfiguration("/api/**", cors);
+    return source;
+  }
 
-    @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http,
-                                                   JwtAuthenticationFilter jwtFilter,
-                                                   RestAuthenticationEntryPoint authEntryPoint,
-                                                   RestAccessDeniedHandler accessDeniedHandler)
-            throws Exception {
+  @Bean
+  public SecurityFilterChain securityFilterChain(
+      HttpSecurity http,
+      JwtAuthenticationFilter jwtFilter,
+      RestAuthenticationEntryPoint authEntryPoint,
+      RestAccessDeniedHandler accessDeniedHandler)
+      throws Exception {
 
-        http
-            .cors(c -> c.configurationSource(corsConfigurationSource()))
-            .csrf(csrf -> csrf.disable())
-            .sessionManagement(s -> s.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-            .exceptionHandling(eh -> eh
-                    .authenticationEntryPoint(authEntryPoint)
+    http.cors(c -> c.configurationSource(corsConfigurationSource()))
+        .csrf(csrf -> csrf.disable())
+        .sessionManagement(s -> s.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+        .exceptionHandling(
+            eh ->
+                eh.authenticationEntryPoint(authEntryPoint)
                     .accessDeniedHandler(accessDeniedHandler))
-            .authorizeHttpRequests(auth -> auth
+        .authorizeHttpRequests(
+            auth ->
+                auth
                     // OpenAPI / Swagger UI (public, no auth)
                     .requestMatchers(
-                            "/v3/api-docs", "/v3/api-docs/**",
-                            "/swagger-ui.html", "/swagger-ui/**"
-                    ).permitAll()
+                        "/v3/api-docs", "/v3/api-docs/**",
+                        "/swagger-ui.html", "/swagger-ui/**")
+                    .permitAll()
                     // Public health and observability endpoints
-                    .requestMatchers("/api/health", "/actuator/**").permitAll()
+                    .requestMatchers("/api/health", "/actuator/**")
+                    .permitAll()
                     // Public auth endpoints (login, register)
-                    .requestMatchers("/api/auth/login", "/api/auth/register").permitAll()
+                    .requestMatchers("/api/auth/login", "/api/auth/register")
+                    .permitAll()
                     // Public read access to the catalog
-                    .requestMatchers(HttpMethod.GET, "/api/motorcycles", "/api/motorcycles/**").permitAll()
+                    .requestMatchers(HttpMethod.GET, "/api/motorcycles", "/api/motorcycles/**")
+                    .permitAll()
                     // CORS preflight
-                    .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                    .requestMatchers(HttpMethod.OPTIONS, "/**")
+                    .permitAll()
                     // Admin-only writes on the catalog
-                    .requestMatchers(HttpMethod.POST,   "/api/motorcycles/**").hasRole("ADMIN")
-                    .requestMatchers(HttpMethod.PUT,    "/api/motorcycles/**").hasRole("ADMIN")
-                    .requestMatchers(HttpMethod.PATCH,  "/api/motorcycles/**").hasRole("ADMIN")
-                    .requestMatchers(HttpMethod.DELETE, "/api/motorcycles/**").hasRole("ADMIN")
+                    .requestMatchers(HttpMethod.POST, "/api/motorcycles/**")
+                    .hasRole("ADMIN")
+                    .requestMatchers(HttpMethod.PUT, "/api/motorcycles/**")
+                    .hasRole("ADMIN")
+                    .requestMatchers(HttpMethod.PATCH, "/api/motorcycles/**")
+                    .hasRole("ADMIN")
+                    .requestMatchers(HttpMethod.DELETE, "/api/motorcycles/**")
+                    .hasRole("ADMIN")
                     // Everything else requires authentication
-                    .anyRequest().authenticated())
-            .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
+                    .anyRequest()
+                    .authenticated())
+        .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
 
-        return http.build();
-    }
+    return http.build();
+  }
 }
